Fixes overflow problems on Chrome

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,11 @@
  *= require_self
  */
 
+html, body {
+  overflow-x: hidden;
+  overflow-y:auto;
+}
+
 body {
   font-family: 'Ubuntu', sans-serif;
   margin: 0;
